--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 	<h2 class=".h2">Introduction</h2>
 
 	<p class=".text-justify"><strong>Smart table</strong> is an <a href="#">Angularjs</a> module to easily display data in
-		a table with a set of built in features such filtering,sorting, etc in a <strong>declarative way</strong>.
+		a table with a set of built in features such filtering, sorting, etc. in a <strong>declarative way</strong>.
 		While developing this module I made sure to focus on these particular points:</p>
 	<div style="margin:1em 0;" class="bg-success padding">
 	<ul>
@@ -83,7 +83,7 @@
 		<li><strong>robust</strong>: smart-table is widely tested which makes the module really stable</li>
 		<li><strong>modular</strong> and <strong>extensible</strong>: The core features can be accessed with the controller
 			API which is created by the top level directive. Then
-			a set of directives (plugins) allow you to compose you table behavior in a declarative way.
+			a set of directives (plugins) allow you to compose your table behavior in a declarative way.
 		</li>
 		<li><strong>developer friendly</strong>: the design of the module has been thought carefully and it is really
 			easy to get into the source code to modify/customise the module to best fit your needs.
@@ -127,7 +127,7 @@
 			application.
 			Then use the markup you would normally do
 			for html tables. On the table element add the <code>st-table</code> attribute to tell smart-table which collection
-			holds your <strong>displayed data</strong>, (ie the one you are going to use in the repeater). Now you will be able to compose the table using the plugins.
+			holds your <strong>displayed data</strong>, (i.e., the one you are going to use in the repeater). Now you will be able to compose the table using the plugins.
 		</p>
 	</div>
 			<tabset>
@@ -189,15 +189,15 @@
 		Of course in this short example, smart-table does not bring much as we don't use any of the plugins but we are now ready to compose our table.
 	</p>
 
-	<p class="text-justify bg-danger padding">smart-table first creates a safe copy of your displayed collection: it creates an other array by copying the <strong>references</strong> of the items. It will then modify the displayed collection (when sorting, filtering etc) based on its safe copy. So if you don't intend to modify the collection outside of the table, it will be all fine.
-		However, if you want to modify the collection (add item, remove item), or <strong>if you load your data asynchronously (via AJAX-Call, timeout, etc)</strong> you will have to tell smart-table to watch the original collection so it can update its safe copy. This is were you use the <strong>stSafeSrc attribute</strong>
+	<p class="text-justify bg-danger padding">smart-table first creates a safe copy of your displayed collection: it creates another array by copying the <strong>references</strong> of the items. It will then modify the displayed collection (when sorting, filtering, etc.) based on its safe copy. So if you don't intend to modify the collection outside of the table, it will be all fine.
+		However, if you want to modify the collection (add item, remove item), or <strong>if you load your data asynchronously (via AJAX-Call, timeout, etc.)</strong> you will have to tell smart-table to watch the original collection so it can update its safe copy. This is where you use the <strong>stSafeSrc attribute</strong>.
 	</p>
 
 	<h3 class="h3">stSafeSrc attribute</h3>
 	
-	<p class="text-justify bg-danger padding">If you are bringing in data asynchronously (from a remote database, restful endpoint, ajax call, etc) you must use the stSafeSrc attribute. You must use a seperate collection for both the base and safe collections or you may end up with an infinite loop.</p>
+	<p class="text-justify bg-danger padding">If you are bringing in data asynchronously (from a remote database, restful endpoint, ajax call, etc.) you must use the stSafeSrc attribute. You must use a separate collection for both the base and safe collections or you may end up with an infinite loop.</p>
 
-	<p class="text-justify">Use it to tell smart-table which collection to watch if you intend to modify its content. Don't pay attention to the sort and filter directives for the moment but use the table and note how the data is correctly synced</p>
+	<p class="text-justify">Use it to tell smart-table which collection to watch if you intend to modify its content. Don't pay attention to the sort and filter directives for the moment but use the table and note how the data is correctly synced.</p>
 
 	<tabset>
 		<tab heading="Markup">
@@ -504,11 +504,11 @@
 		<code>st-class-ascent="myClassName"</code> and <code>st-class-descent="className"</code>.
 		The css used for this website is
 		<pre><code class="language-css">
-  .st-sort-ascent:before{
+  .st-sort-ascent:before {
     content: '\25B2';
   }
 
-  .st-sort-descent:before{
+  .st-sort-descent:before {
     content: '\25BC';
   }
 </code></pre>
@@ -517,6 +517,7 @@
 	<div class="text-center"><a class="btn btn-primary" href="https://github.com/lorenzofox3/smart-table-website/tree/gh-pages/sections/sort"><i
 		class="glyphicon glyphicon-pencil"></i>improve the documentation</a></div>
 </section>
+
 <section id="section-filter" class="clearfix" ng-controller="filterCtrl">
     <h2 class="h2">Search/filter data</h2>
     <p>
