--- a/sections/head/markup.html
+++ b/sections/head/markup.html
@@ -2,15 +2,15 @@
 <html ng-app="app">
 <head>
 	<title>Smart Table documentation</title>
-	<script src="assets/lib/prism/prism.js"></script>
-	<script src="node_modules/angular/angular.min.js"></script>
-	<script src="node_modules/angular-ui-bootstrap/dist/ui-bootstrap.js"></script>
-	<script src="node_modules/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
-	<script src="node_modules/angular-smart-table/dist/smart-table.js"></script>
-	<script src="assets/js/app.js"></script>
-	<link rel="stylesheet" href="assets/css/mainStyle.css"/>
-	<link rel="stylesheet" href="assets/lib/prism/prism.css"/>
-	<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css"/>
+	<script src="./assets/lib/prism/prism.js"></script>
+	<script src="./assets/lib/angular.js"></script>
+	<script src="./assets/lib/ui-bootstrap.js"></script>
+	<script src="./assets/lib/ui-bootstrap-tpls.js"></script>
+	<script src="./assets/lib/smart-table.min.js"></script>
+	<script src="./assets/js/app.js"></script>
+	<link rel="stylesheet" href="./assets/css/mainStyle.css"/>
+	<link rel="stylesheet" href="./assets/lib/prism/prism.css"/>
+	<link rel="stylesheet" href="./assets/css/bootstrap.css"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body class="container-fluid" ng-controller="mainCtrl">
