add link for angular > v2

--- a/sections/Introduction/markup.html
+++ b/sections/Introduction/markup.html
@@ -1,55 +1,66 @@
 <section id="section-intro" ng-controller="paginationCtrl">
 
-	<p style="margin-top:1em;font-size: 1.75em;" class="text-center padding bg-danger">
-		The next version of this project will be created as a binding for the more ambitious <a href="https://smart-table.github.io/www/dist/">new project</a>. Share the word or come and help over and let's create the best grid ecosystem ever!
-	</p>
+  <p style="margin-top:1em;font-size: 1.75em;" class="text-center padding bg-danger">
+    The next version of this project will be created as a binding for the more ambitious <a
+    href="https://smart-table.github.io/www/dist/">new project</a>. Share the word or come and help over and let's
+    create the best grid ecosystem ever!
+  </p>
 
-	<h2 class=".h2">Introduction</h2>
+  <p class="text-center bg-warning padding">
+    If you are looking for Smart Table for Angular (version two and above) please check <a
+    href="https://itnext.io/smart-table-for-angular-part-1-515ef6cb2d0a">This article</a>
+  </p>
 
-	<p class=".text-justify"><strong>Smart table</strong> is an <a href="#">Angularjs</a> module to easily display data in
-		a table with a set of built in features such filtering, sorting, etc. in a <strong>declarative way</strong>.
-		While developing this module I made sure to focus on these particular points:</p>
-	<div style="margin:1em 0;" class="bg-success padding">
-	<ul>
-		<li><strong>lightweight</strong>: smart-table is less than 4kb minified and has <strong>no
-			dependencies</strong> other than Angular itself. And you can even reduce its size with a <a href="#">custom
-			build</a> if you are not interested in some of the plugins.
-		</li>
-		<li><strong>robust</strong>: smart-table is widely tested which makes the module really stable</li>
-		<li><strong>modular</strong> and <strong>extensible</strong>: The core features can be accessed with the controller
-			API which is created by the top level directive. Then
-			a set of directives (plugins) allow you to compose your table behavior in a declarative way.
-		</li>
-		<li><strong>developer friendly</strong>: the design of the module has been thought carefully and it is really
-			easy to get into the source code to modify/customise the module to best fit your needs.
-	</ul>
-	</div>
+  <h2 class=".h2">Introduction</h2>
 
-	<div class="text-center">
-		<p>An example of server side driven smart-table used for <a href="http://reactcrm.com/">React CRM</a></p>
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/UO84M__kqDA?rel=0" frameborder="0" allowfullscreen></iframe>
-	</div>
+  <p class=".text-justify"><strong>Smart table</strong> is an <a href="#">Angularjs</a> module to easily display data in
+    a table with a set of built in features such filtering, sorting, etc. in a <strong>declarative way</strong>.
+    While developing this module I made sure to focus on these particular points:</p>
+  <div style="margin:1em 0;" class="bg-success padding">
+    <ul>
+      <li><strong>lightweight</strong>: smart-table is less than 4kb minified and has <strong>no
+        dependencies</strong> other than Angular itself. And you can even reduce its size with a <a href="#">custom
+        build</a> if you are not interested in some of the plugins.
+      </li>
+      <li><strong>robust</strong>: smart-table is widely tested which makes the module really stable</li>
+      <li><strong>modular</strong> and <strong>extensible</strong>: The core features can be accessed with the
+        controller
+        API which is created by the top level directive. Then
+        a set of directives (plugins) allow you to compose your table behavior in a declarative way.
+      </li>
+      <li><strong>developer friendly</strong>: the design of the module has been thought carefully and it is really
+        easy to get into the source code to modify/customise the module to best fit your needs.
+    </ul>
+  </div>
 
-	<p>Although smart-table is by far the best table module for angular :D, there are other table modules in the
-		angular ecosystem you might be interested in. The approach and philosophy are different and maybe more appropriate
-		to your way of building web application. Among the most popular:</p>
-	<ul>
-		<li><a href="http://ui-grid.info/">UI Grid</a></li>
-		<li><a href="http://esvit.github.io/ng-table/#!/">ng-table</a></li>
-	</ul>
+  <div class="text-center">
+    <p>An example of server side driven smart-table used for <a href="http://reactcrm.com/">React CRM</a></p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/UO84M__kqDA?rel=0" frameborder="0"
+            allowfullscreen></iframe>
+  </div>
+
+  <p>Although smart-table is by far the best table module for angular :D, there are other table modules in the
+    angular ecosystem you might be interested in. The approach and philosophy are different and maybe more appropriate
+    to your way of building web application. Among the most popular:</p>
+  <ul>
+    <li><a href="http://ui-grid.info/">UI Grid</a></li>
+    <li><a href="http://esvit.github.io/ng-table/#!/">ng-table</a></li>
+  </ul>
 
   <p>If you want to play around, try this <a href="http://plnkr.co/edit/OGq29V?p=preview">plunker</a></p>
 
-	<p class="text-justify">
-		clone the repository or install with bower: <pre style="display: inline-block"><code>bower install angular-smart-table</code></pre>
-	</p>
-	<p class="text-justify">
-		Or use npm: <pre style="display: inline-block"><code>npm install angular-smart-table</code></pre>
-	</p>
+  <p class="text-justify">
+    clone the repository or install with bower:
+  <pre style="display: inline-block"><code>bower install angular-smart-table</code></pre>
+  </p>
+  <p class="text-justify">
+    Or use npm:
+  <pre style="display: inline-block"><code>npm install angular-smart-table</code></pre>
+  </p>
 
-	<div class="text-center">
-		<a class="btn btn-primary"
-			 href="https://github.com/lorenzofox3/smart-table-website/tree/gh-pages/sections/Introduction"><i
-			class="glyphicon glyphicon-pencil"></i> Improve the documentation</a>
-	</div>
+  <div class="text-center">
+    <a class="btn btn-primary"
+       href="https://github.com/lorenzofox3/smart-table-website/tree/gh-pages/sections/Introduction"><i
+      class="glyphicon glyphicon-pencil"></i> Improve the documentation</a>
+  </div>
 </section>
